cmake_minimum_required(VERSION 3.12)
project(lab1)

set(CMAKE_CXX_STANDARD 11)

include_directories(.)
include_directories(lang)
include_directories(proto/output)
include_directories(proto/output/google)
include_directories(proto/output/google/protobuf)
include_directories(proto/output/google/protobuf/io)
include_directories(proto/output/google/protobuf/stubs)
include_directories(proto/output/google/protobuf/util)
include_directories(rpc)

add_executable(lab1
    lang/algorithm.h
    lang/verify.h
    proto/output/google/protobuf/io/coded_stream.h
    proto/output/google/protobuf/io/gzip_stream.h
    proto/output/google/protobuf/io/printer.h
    proto/output/google/protobuf/io/strtod.h
    proto/output/google/protobuf/io/tokenizer.h
    proto/output/google/protobuf/io/zero_copy_stream.h
    proto/output/google/protobuf/io/zero_copy_stream_impl.h
    proto/output/google/protobuf/io/zero_copy_stream_impl_lite.h
    proto/output/google/protobuf/stubs/atomic_sequence_num.h
    proto/output/google/protobuf/stubs/atomicops.h
    proto/output/google/protobuf/stubs/atomicops_internals_arm64_gcc.h
    proto/output/google/protobuf/stubs/atomicops_internals_arm_gcc.h
    proto/output/google/protobuf/stubs/atomicops_internals_arm_qnx.h
    proto/output/google/protobuf/stubs/atomicops_internals_atomicword_compat.h
    proto/output/google/protobuf/stubs/atomicops_internals_generic_gcc.h
    proto/output/google/protobuf/stubs/atomicops_internals_macosx.h
    proto/output/google/protobuf/stubs/atomicops_internals_mips_gcc.h
    proto/output/google/protobuf/stubs/atomicops_internals_pnacl.h
    proto/output/google/protobuf/stubs/atomicops_internals_power.h
    proto/output/google/protobuf/stubs/atomicops_internals_ppc_gcc.h
    proto/output/google/protobuf/stubs/atomicops_internals_s390_gcc.h
    proto/output/google/protobuf/stubs/atomicops_internals_solaris.h
    proto/output/google/protobuf/stubs/atomicops_internals_tsan.h
    proto/output/google/protobuf/stubs/atomicops_internals_x86_gcc.h
    proto/output/google/protobuf/stubs/atomicops_internals_x86_msvc.h
    proto/output/google/protobuf/stubs/bytestream.h
    proto/output/google/protobuf/stubs/callback.h
    proto/output/google/protobuf/stubs/casts.h
    proto/output/google/protobuf/stubs/common.h
    proto/output/google/protobuf/stubs/fastmem.h
    proto/output/google/protobuf/stubs/hash.h
    proto/output/google/protobuf/stubs/logging.h
    proto/output/google/protobuf/stubs/macros.h
    proto/output/google/protobuf/stubs/mutex.h
    proto/output/google/protobuf/stubs/once.h
    proto/output/google/protobuf/stubs/platform_macros.h
    proto/output/google/protobuf/stubs/port.h
    proto/output/google/protobuf/stubs/scoped_ptr.h
    proto/output/google/protobuf/stubs/shared_ptr.h
    proto/output/google/protobuf/stubs/singleton.h
    proto/output/google/protobuf/stubs/status.h
    proto/output/google/protobuf/stubs/stl_util.h
    proto/output/google/protobuf/stubs/stringpiece.h
    proto/output/google/protobuf/stubs/template_util.h
    proto/output/google/protobuf/stubs/type_traits.h
    proto/output/google/protobuf/util/field_comparator.h
    proto/output/google/protobuf/util/field_mask_util.h
    proto/output/google/protobuf/util/json_util.h
    proto/output/google/protobuf/util/message_differencer.h
    proto/output/google/protobuf/util/time_util.h
    proto/output/google/protobuf/util/type_resolver.h
    proto/output/google/protobuf/util/type_resolver_util.h
    proto/output/google/protobuf/any.h
    proto/output/google/protobuf/any.pb.h
    proto/output/google/protobuf/api.pb.h
    proto/output/google/protobuf/arena.h
    proto/output/google/protobuf/arenastring.h
    proto/output/google/protobuf/descriptor.h
    proto/output/google/protobuf/descriptor.pb.h
    proto/output/google/protobuf/descriptor_database.h
    proto/output/google/protobuf/duration.pb.h
    proto/output/google/protobuf/dynamic_message.h
    proto/output/google/protobuf/empty.pb.h
    proto/output/google/protobuf/extension_set.h
    proto/output/google/protobuf/field_mask.pb.h
    proto/output/google/protobuf/generated_enum_reflection.h
    proto/output/google/protobuf/generated_enum_util.h
    proto/output/google/protobuf/generated_message_reflection.h
    proto/output/google/protobuf/generated_message_util.h
    proto/output/google/protobuf/map.h
    proto/output/google/protobuf/map_entry.h
    proto/output/google/protobuf/map_entry_lite.h
    proto/output/google/protobuf/map_field.h
    proto/output/google/protobuf/map_field_inl.h
    proto/output/google/protobuf/map_field_lite.h
    proto/output/google/protobuf/map_type_handler.h
    proto/output/google/protobuf/message.h
    proto/output/google/protobuf/message_lite.h
    proto/output/google/protobuf/metadata.h
    proto/output/google/protobuf/reflection.h
    proto/output/google/protobuf/reflection_ops.h
    proto/output/google/protobuf/repeated_field.h
    proto/output/google/protobuf/service.h
    proto/output/google/protobuf/source_context.pb.h
    proto/output/google/protobuf/struct.pb.h
    proto/output/google/protobuf/text_format.h
    proto/output/google/protobuf/timestamp.pb.h
    proto/output/google/protobuf/type.pb.h
    proto/output/google/protobuf/unknown_field_set.h
    proto/output/google/protobuf/wire_format.h
    proto/output/google/protobuf/wire_format_lite.h
    proto/output/google/protobuf/wire_format_lite_inl.h
    proto/output/google/protobuf/wrappers.pb.h
    proto/output/common.pb.cc
    proto/output/common.pb.h
    proto/output/datanode.pb.cc
    proto/output/datanode.pb.h
    proto/output/namenode.pb.cc
    proto/output/namenode.pb.h
    rpc/rpc.cc
    rpc/connection.h
    rpc/fifo.h
    rpc/jsl_log.h
    rpc/marshall.h
    rpc/method_thread.h
    rpc/pollmgr.h
    rpc/rpc.h
    rpc/slock.h
    rpc/thr_pool.h
    datanode.cc
    datanode.h
    datanode_base.cc
    demo_client.cc
    demo_protocol.h
    demo_server.cc
    extent_client.cc
    extent_client.h
    extent_protocol.h
    extent_server.cc
    extent_server.h
    extent_smain.cc
    fuse.cc
    gettime.cc
    gettime.h
    handle.cc
    handle.h
    hrpc.h
    inode_manager.cc
    inode_manager.h
    lock_client.cc
    lock_client.h
    lock_client_cache.cc
    lock_client_cache.h
    lock_demo.cc
    lock_protocol.h
    lock_server.cc
    lock_server.h
    lock_server_cache.cc
    lock_server_cache.h
    lock_smain.cc
    lock_tester.cc
    namenode.cc
    namenode.h
    namenode_base.cc
    test-lab-3-a.c
    test-lab-3-b.c
    test-lab2-part1-g.c
    test-lab2-part2-a.c
    test-lab2-part2-b.c
    threader.h
    tprintf.h
    yfs_client.cc
    yfs_client.h)
